# synthesis-agent_MCP

./: MCP Maker Design.docx  README.md  project_context.txt  pyproject.toml
sky/cli/: main.py
sky/core/: synthesis_agent.py
sky_mcp/: __init__.py  paths.py  report_io.py  response.py  server.py  tools.py
src/: agent.py  recursive_synthesis.py  search_api.py
src/utils/: assets.py
tests/: test_mcp_hardening.py  test_mcp_import.py  test_mcp_tools.py
