[project]
name = "synthesis-agent"
version = "0.1.0"
description = "SKY - Synthesis Knowledge Yield Agent for materials synthesis discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "h5py>=3.14.0",
    "mace-torch>=0.3.14",
    "matminer>=0.9.3",
    "mp-api>=0.45.8",
    "pymatgen>=2025.6.14",
    "typer>=0.17.0",
    "rich>=14.0.0",
    "openai>=1.0.0",
    "monty>=2025.0.0",
    "python-dotenv>=1.0.0",
    "jupyterlab>=4.4.7",
    "mcp>=1.11.0,<2",
]

[project.scripts]
sky = "sky.cli.main:main"
sky-mcp = "sky_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["sky", "sky.cli", "sky.core", "sky.report", "src", "src.utils", "sky_mcp"]
